--- a/base_local_planner/CMakeLists.txt
+++ b/base_local_planner/CMakeLists.txt
@@ -3,7 +3,7 @@ project(base_local_planner)
 
 find_package(catkin REQUIRED
         COMPONENTS
-            cmake_modules
+            #cmake_modules
             roscpp
             tf
             message_generation
